# brainCodeCamp2024

./: .firebaserc  .gitignore  README.md  _config.yml  _toc.yml  firebase.json  pyproject.toml
.github/workflows/: firebase-hosting.yml  publish-book.yml
ExtraResources/: AttentionTransformer.md
GeneralInfo/: FAQ.md  OH-teams.md  graduates.md  on-site-meetups.md  schedule.md  staff.md
Graduates/: activities.md  projects.md
ModalityExploration/spikingData/: spiking_data_processing_and_analysis.ipynb
Prereqs/IntroToModeling/: modeling_part1_simple_linear_model.ipynb
PreviousOfferings/BCC2023/: activities.md  projects.md
_static/: style.css
